Apresentação de slides utilizada no exame de qualificação. Algumas alterações no texto. Arquivo do texto revisado pela banca.

--- a/qualis-apresentação/Qualis/main.tex
+++ b/qualis-apresentação/Qualis/main.tex
@@ -69,6 +69,8 @@
 \usepackage{stmaryrd}
 \usepackage{outlines}
 \usepackage{mathrsfs} %fonte da sintaxe 
+\usepackage{rotating} % permite rotacionar textos e figuras -> como na tabela cronograma
+\usepackage{xcolor,colortbl} % colorir células de tabelas
 \input{config}
 
 \usepackage[style=verbose,autocite=footnote]{biblatex}
@@ -87,7 +89,9 @@
 Instituto de Ciências Matemáticas e de Computação - ICMC\\
 }
 
-\date[05 de julho de 2021]{05 de julho de 2021}
+\date[06 de agosto de 2021]{06 de agosto de 2021}
+
+\titlegraphic{\includegraphics[width=0.7\textwidth]{figuras/fomento1.pdf}}
 
 \subject{}
 
