--- a/qualis-apresentação/Qualis/seções/metodologia.tex
+++ b/qualis-apresentação/Qualis/seções/metodologia.tex
@@ -1,11 +1,23 @@
 \section{Metodologia}
 \subsection{Técnicas de pesquisa}
 
+\begin{frame}{Objetivo da pesquisa}
+	\begin{block}{Objetivo geral}
+		Propor uma estratégia para verificação formal para aprimoramento de segurança aplicada na fase de pré-implantação de CIs escritos em \textbf{Solidity} para detecção das vulnerabilidades de \textbf{reentrância}, \textbf{\textit{delegatecall injection}} e \textbf{contrato suicida}, por meio da técnica de \textbf{\textit{model checking}}.
+	\end{block}
+	%	Objetivos específicos:
+	%	\begin{itemize}
+	%		\item Determinar o formalismo adequado para modelagem dos contratos e para representação das vulnerabilidades;
+	%		\item Implementar o método de verificação;
+	%		\item Definir as estratégias para validação da proposta.
+	%	\end{itemize}
+\end{frame}
+
 \begin{frame}{Metodologia e técnicas de pesquisa}
-    \begin{block}{Mapeamento Sistemático (MS)}
+    \begin{block}{Objetivo do Mapeamento Sistemático (MS) realizado}
     Identificar e classificar o conteúdo relacionado à \textbf{verificação para correção} ou \textbf{detecção de vulnerabilidades} para aprimoramento da segurança dos CIs.
     \end{block}
-    Com base no MS:
+    Fundamentado no MS:
     \begin{itemize}
         \item Seleção do método de verificação e detecção de vulnerabilidades;
         \item Seleção das vulnerabilidades abordadas;
@@ -18,30 +30,23 @@
     Três fases:
     \begin{itemize}
         \item Planejamento;
-        \begin{itemize}
-            \item Objetivo e protocolo do MS.
-        \end{itemize}
         \item Condução;
-        \begin{itemize}
-            \item Identificação dos estudos primários;
-            \item Extração e síntese dos dados.
-        \end{itemize}
         \item Publicação dos resultados.
-        \begin{itemize}
-            \item Questões de pesquisa são respondidas;
-            \item Relato dos resultados.
-        \end{itemize}
     \end{itemize}
+    \begin{figure}[!htb]
+		\centering
+		\includegraphics[scale=0.3]{figuras/metodologia/ms_fluxo.png}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Protocolo do MS}
 \textbf{Questões de pesquisa}:
     \begin{itemize}
-        \item \textbf{QP 1.} Quais abordagens têm sido propostas?
-        \item \textbf{QP 2.} Quando e onde os estudos têm sido publicados?
-        \item \textbf{QP 3.} Quais problemas ou vulnerabilidades relacionados aos CIs têm sido abordados?
-        \item \textbf{QP 4.} Quais estratégias de validação foram utilizadas?
-        \item \textbf{QP 5.} Quais são as limitações presentes nas abordagens?
+        \item \textbf{QP 1.} Quais \textbf{abordagens} têm sido propostas?
+        \item \textbf{QP 2.} \textbf{Quando} e \textbf{onde} os estudos têm sido publicados?
+        \item \textbf{QP 3.} Quais \textbf{problemas} ou \textbf{vulnerabilidades} relacionados aos CIs têm sido abordados?
+        \item \textbf{QP 4.} Quais \textbf{estratégias de validação} foram utilizadas?
+        \item \textbf{QP 5.} Quais são as \textbf{limitações} presentes nas abordagens?
     \end{itemize}    
 \end{frame}
 
@@ -61,101 +66,100 @@
 \end{frame}
 
 \begin{frame}{Planejamento e condução}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.3]{figuras/metodologia/ms_fluxo.png}
-    \end{figure}
     \begin{itemize}
         \item Total de estudos selecionados: 2091
         \item Total de estudos aceitos: \textbf{104}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Resultados - QP1}
+\begin{frame}{Discussão - \textit{Model checking}}
     \begin{itemize}
-        \item \textbf{QP1.} Quais abordagens têm sido propostas?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.4]{figuras/metodologia/rq1-abordagens.png}
-    \end{figure}
-\end{frame}
-
-\begin{frame}{Resultados - QP2}
-    \begin{itemize}
-        \item \textbf{QP2.} Quando e onde os estudos têm sido publicados?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.5]{figuras/metodologia/rq2-distribuicao-estudos.png}
-    \end{figure}
-\end{frame}
-
-\begin{frame}{Resultados - QP2}
-    \begin{itemize}
-        \item \textbf{QP2.} Quando e onde os estudos têm sido publicados?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.35]{figuras/metodologia/rq2-distribuicao-abordagens.png}
-    \end{figure}
-\end{frame}
-
-\begin{frame}{Resultados - QP3}
-    \begin{itemize}
-        \item \textbf{QP3.} Quais problemas ou vulnerabilidades relacionados aos CIs têm sido abordados?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.55]{figuras/metodologia/rq3-vulnerabilidades.png}
-    \end{figure}    
-\end{frame}
-
-\begin{frame}{Resultados - QP3}
-    \begin{itemize}
-        \item \textbf{QP3.} Quais problemas ou vulnerabilidades relacionados aos CIs têm sido abordados?
-    \end{itemize}
-    \input{tabelas/rq3-vulnerabilidades}
-\end{frame}
-
-\begin{frame}{Resultados - QP4}
-    \begin{itemize}
-        \item \textbf{QP4.} Quais estratégias de validação foram utilizadas?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.5]{figuras/metodologia/rq4-validacao-propostas.png}
-    \end{figure}    
-\end{frame}
-
-\begin{frame}{Resultados - QP5}
-    \begin{itemize}
-        \item \textbf{QP5.} Quais são as limitações presentes nas abordagens?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.4]{figuras/metodologia/rq5-abrangencia.png}
-    \end{figure}     
-\end{frame}
-
-\begin{frame}{Resultados - QP5}
-    \begin{itemize}
-        \item \textbf{QP5.} Quais são as limitações presentes nas abordagens?
-    \end{itemize}
-    \begin{figure}[!htb]
-     \centering
-     \includegraphics[scale=0.4]{figuras/metodologia/rq5-automacao.png}
-    \end{figure}     
-\end{frame}
-
-\begin{frame}{Discussão}
-    \begin{itemize}
-        \item \textit{Model checking} está entre as abordagens mais utilizadas nos últimos anos;
+        \item \textbf{Está entre as abordagens mais utilizadas nos últimos anos};
         \item Há poucos estudos com validação experimental;
         \item Reentrância foi a vulnerabilidade mais abordada;
-        \item A violação de propriedades 
+        \item Violação de propriedades:
+        \begin{itemize}
+        	\item Amplamente abordada;
+        	\item Principalmente \textit{model checking}.
+        \end{itemize}
+    	\item Está entre as que apresentam melhor precisão e acurácia.
     \end{itemize}
 \end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+    \begin{figure}[!htb]
+		\centering
+		\includegraphics[scale=0.35]{figuras/metodologia/rq2-distribuicao-abordagens.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+    \begin{figure}[!htb]
+		\centering
+		\includegraphics[scale=0.4]{figuras/metodologia/rq1-abordagens.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+	\begin{itemize}
+		\item Está entre as abordagens mais utilizadas nos últimos anos;
+		\item \textbf{Há poucos estudos com validação experimental};
+		\item Reentrância foi a vulnerabilidade mais abordada;
+		\item Violação de propriedades:
+		\begin{itemize}
+			\item Amplamente abordada;
+			\item Principalmente \textit{model checking}.
+		\end{itemize}
+		\item Está entre as que apresentam melhor precisão e acurácia.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+    \begin{figure}[!htb]
+		\centering
+		\includegraphics[scale=0.5]{figuras/metodologia/rq4-validacao-propostas.png}
+	\end{figure} 
+\end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+	\begin{itemize}
+		\item Está entre as abordagens mais utilizadas nos últimos anos;
+		\item Há poucos estudos com validação experimental;
+		\item \textbf{Reentrância foi a vulnerabilidade mais abordada};
+		\item \textbf{Violação de propriedades}:
+		\begin{itemize}
+			\item Amplamente abordada;
+			\item Principalmente \textit{model checking}.
+		\end{itemize}
+		\item Está entre as que apresentam melhor precisão e acurácia.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+    \begin{figure}[!htb]
+		\centering
+		\includegraphics[scale=0.55]{figuras/metodologia/rq3-vulnerabilidades.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Discussão - \textit{Model checking}}
+	\input{tabelas/rq3-vulnerabilidades} 
+\end{frame}   
+
+\begin{frame}{Discussão - \textit{Model checking}}
+	\begin{itemize}
+		\item Está entre as abordagens mais utilizadas nos últimos anos;
+		\item Há poucos estudos com validação experimental;
+		\item Reentrância foi a vulnerabilidade mais abordada;
+		\item Violação de propriedades:
+		\begin{itemize}
+			\item Amplamente abordada;
+			\item Principalmente \textit{model checking}.
+		\end{itemize}
+		\item \textbf{Está entre as que apresentam melhor precisão e acurácia.}
+	\end{itemize}
+\end{frame}
+
 
 %abrangência
 %nível de automação
